# huectl-rs

./: Cargo.toml  README.md
src/: config.rs  main.rs  output.rs  util.rs
src/arg/: capabilities.rs  config.rs  group.rs  light.rs  mod.rs  resourcelink.rs  rule.rs  scene.rs  schedule.rs  sensor.rs  subcommand.rs  value.rs
src/arg/subcommand/: capabilities.rs  config.rs  group.rs  light.rs  mod.rs  scene.rs  schedule.rs
src/command/: bridge.rs  capabilities.rs  config.rs  group.rs  light.rs  mod.rs  scene.rs  schedule.rs
