[package]
name = "huectl"
description = "A command line interface to Philips Hue"
version = "0.1.0"
authors = ["yuqio <niklas.sauter@gmx.de>"]
edition = "2018"
homepage = "https://github.com/yuqio/huectl-rs"
repository = "https://github.com/yuqio/huectl-rs"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["philips", "hue", "light", "cli"]

[dependencies]
huelib = "0.2"
envconfig = "0.7"
envconfig_derive = "0.7"
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
